// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogItem has a responsive image on blog page when needed 1`] = `
<BlogItem
  blogDate="October 5th, 2019"
  blogExcerpt="Test excerpt for blog post"
  blogImageObj={
    Object {
      "aspectRatio": 1.3345195729537367,
      "sizes": "(max-width: 1500px) 100vw, 1500px",
      "src": "/static/2d816ba796e3a2f678b37125218f0b03/37d86/mangrum_family.jpg",
      "srcSet": "/static/2d816ba796e3a2f678b37125218f0b03/01f8d/mangrum_family.jpg 375w,
/static/2d816ba796e3a2f678b37125218f0b03/f9913/mangrum_family.jpg 750w,
/static/2d816ba796e3a2f678b37125218f0b03/37d86/mangrum_family.jpg 1500w,
/static/2d816ba796e3a2f678b37125218f0b03/c2bdc/mangrum_family.jpg 1506w",
    }
  }
  blogLink="test-excerpt-for-blog-post"
  blogTitle="Reaaaaaaaaaaaaaaaaaaaaaaaaaaaaalllllyyyyy looooooooooooooong title"
  onBlogIndex={true}
>
  <div
    className="column content is-medium is-full-tablet  is-6"
  >
    <figure
      className="image is-marginless"
    >
      <Image
        Tag="div"
        alt=""
        durationFadeIn={500}
        fadeIn={true}
        fluid={
          Object {
            "aspectRatio": 1.3345195729537367,
            "sizes": "(max-width: 1500px) 100vw, 1500px",
            "src": "/static/2d816ba796e3a2f678b37125218f0b03/37d86/mangrum_family.jpg",
            "srcSet": "/static/2d816ba796e3a2f678b37125218f0b03/01f8d/mangrum_family.jpg 375w,
/static/2d816ba796e3a2f678b37125218f0b03/f9913/mangrum_family.jpg 750w,
/static/2d816ba796e3a2f678b37125218f0b03/37d86/mangrum_family.jpg 1500w,
/static/2d816ba796e3a2f678b37125218f0b03/c2bdc/mangrum_family.jpg 1506w",
          }
        }
        loading="lazy"
      >
        <div
          className=" gatsby-image-wrapper"
          key="fluid-\\"/static/2d816ba796e3a2f678b37125218f0b03/01f8d/mangrum_family.jpg 375w,\\\\n/static/2d816ba796e3a2f678b37125218f0b03/f9913/mangrum_family.jpg 750w,\\\\n/static/2d816ba796e3a2f678b37125218f0b03/37d86/mangrum_family.jpg 1500w,\\\\n/static/2d816ba796e3a2f678b37125218f0b03/c2bdc/mangrum_family.jpg 1506w\\""
          style={
            Object {
              "maxHeight": null,
              "maxWidth": null,
              "overflow": "hidden",
              "position": "relative",
            }
          }
        >
          <div
            aria-hidden={true}
            style={
              Object {
                "paddingBottom": "74.93333333333334%",
                "width": "100%",
              }
            }
          />
          <picture>
            <source
              sizes="(max-width: 1500px) 100vw, 1500px"
              srcSet="/static/2d816ba796e3a2f678b37125218f0b03/01f8d/mangrum_family.jpg 375w,
/static/2d816ba796e3a2f678b37125218f0b03/f9913/mangrum_family.jpg 750w,
/static/2d816ba796e3a2f678b37125218f0b03/37d86/mangrum_family.jpg 1500w,
/static/2d816ba796e3a2f678b37125218f0b03/c2bdc/mangrum_family.jpg 1506w"
            />
            <ForwardRef
              alt=""
              loading="lazy"
              onLoad={[Function]}
              sizes="(max-width: 1500px) 100vw, 1500px"
              src="/static/2d816ba796e3a2f678b37125218f0b03/37d86/mangrum_family.jpg"
              srcSet="/static/2d816ba796e3a2f678b37125218f0b03/01f8d/mangrum_family.jpg 375w,
/static/2d816ba796e3a2f678b37125218f0b03/f9913/mangrum_family.jpg 750w,
/static/2d816ba796e3a2f678b37125218f0b03/37d86/mangrum_family.jpg 1500w,
/static/2d816ba796e3a2f678b37125218f0b03/c2bdc/mangrum_family.jpg 1506w"
              style={
                Object {
                  "opacity": 0,
                  "transition": "opacity 500ms",
                }
              }
            >
              <img
                alt=""
                loading="lazy"
                onLoad={[Function]}
                sizes="(max-width: 1500px) 100vw, 1500px"
                src="/static/2d816ba796e3a2f678b37125218f0b03/37d86/mangrum_family.jpg"
                srcSet="/static/2d816ba796e3a2f678b37125218f0b03/01f8d/mangrum_family.jpg 375w,
/static/2d816ba796e3a2f678b37125218f0b03/f9913/mangrum_family.jpg 750w,
/static/2d816ba796e3a2f678b37125218f0b03/37d86/mangrum_family.jpg 1500w,
/static/2d816ba796e3a2f678b37125218f0b03/c2bdc/mangrum_family.jpg 1506w"
                style={
                  Object {
                    "height": "100%",
                    "left": 0,
                    "objectFit": "cover",
                    "objectPosition": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "top": 0,
                    "transition": "opacity 500ms",
                    "width": "100%",
                  }
                }
              />
            </ForwardRef>
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcset=\\"/static/2d816ba796e3a2f678b37125218f0b03/01f8d/mangrum_family.jpg 375w,
/static/2d816ba796e3a2f678b37125218f0b03/f9913/mangrum_family.jpg 750w,
/static/2d816ba796e3a2f678b37125218f0b03/37d86/mangrum_family.jpg 1500w,
/static/2d816ba796e3a2f678b37125218f0b03/c2bdc/mangrum_family.jpg 1506w\\" sizes=\\"(max-width: 1500px) 100vw, 1500px\\" /><img loading=\\"lazy\\" sizes=\\"(max-width: 1500px) 100vw, 1500px\\" srcset=\\"/static/2d816ba796e3a2f678b37125218f0b03/01f8d/mangrum_family.jpg 375w,
/static/2d816ba796e3a2f678b37125218f0b03/f9913/mangrum_family.jpg 750w,
/static/2d816ba796e3a2f678b37125218f0b03/37d86/mangrum_family.jpg 1500w,
/static/2d816ba796e3a2f678b37125218f0b03/c2bdc/mangrum_family.jpg 1506w\\" src=\\"/static/2d816ba796e3a2f678b37125218f0b03/37d86/mangrum_family.jpg\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
      </Image>
    </figure>
    <h2
      className="title is-5"
    >
      <mockConstructor
        to="test-excerpt-for-blog-post"
      >
        <a
          href="test-excerpt-for-blog-post"
        >
          Reaaaaaaaaaaaaaaaaaaaaaaaaaaaaalllllyyyyy looooooooooooooong title
        </a>
      </mockConstructor>
    </h2>
    <h3
      className="title is-7"
    >
      October 5th, 2019
    </h3>
    <p>
      Test excerpt for blog post
      ...
    </p>
    <mockConstructor
      className="button is-link"
      to="test-excerpt-for-blog-post"
    >
      <a
        className="button is-link"
        href="test-excerpt-for-blog-post"
      >
        Read Post
      </a>
    </mockConstructor>
  </div>
</BlogItem>
`;

exports[`BlogItem has an image on blog page when needed 1`] = `
<BlogItem
  blogDate="October 5th, 2019"
  blogExcerpt="Test excerpt for blog post"
  blogImage="src/assets/image.jpg"
  blogLink="test-excerpt-for-blog-post"
  blogTitle="Reaaaaaaaaaaaaaaaaaaaaaaaaaaaaalllllyyyyy looooooooooooooong title"
  onBlogIndex={true}
>
  <div
    className="column content is-medium is-full-tablet  is-6"
  >
    <figure
      className="image is-marginless"
    >
      <img
        alt=""
        src="src/assets/image.jpg"
      />
    </figure>
    <h2
      className="title is-5"
    >
      <mockConstructor
        to="test-excerpt-for-blog-post"
      >
        <a
          href="test-excerpt-for-blog-post"
        >
          Reaaaaaaaaaaaaaaaaaaaaaaaaaaaaalllllyyyyy looooooooooooooong title
        </a>
      </mockConstructor>
    </h2>
    <h3
      className="title is-7"
    >
      October 5th, 2019
    </h3>
    <p>
      Test excerpt for blog post
      ...
    </p>
    <mockConstructor
      className="button is-link"
      to="test-excerpt-for-blog-post"
    >
      <a
        className="button is-link"
        href="test-excerpt-for-blog-post"
      >
        Read Post
      </a>
    </mockConstructor>
  </div>
</BlogItem>
`;

exports[`BlogItem should render without crashing 1`] = `
<div
  className="column content   is-one-third-desktop "
>
  <h2
    className="title is-5"
  >
    <mockConstructor
      to="https://linktosite.com"
    >
      Test Title
    </mockConstructor>
  </h2>
  <h3
    className="title is-7"
  >
    October 5th, 2019
  </h3>
  <p>
    Test excerpt for blog post
    ...
  </p>
  <mockConstructor
    className="button is-link"
    to="https://linktosite.com"
  >
    Read Post
  </mockConstructor>
</div>
`;
